--- a/NotepadOnlineMobile/NotepadOnlineMobile/NotepadOnlineMobile.csproj
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/NotepadOnlineMobile.csproj
@@ -52,6 +52,9 @@
     <EmbeddedResource Update="LoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="LoginRegisterPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="RegisterPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
