--- a/NotepadOnlineMobile/NotepadOnlineMobile/NotepadOnlineMobile.csproj
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/NotepadOnlineMobile.csproj
@@ -31,6 +31,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="EditPasswordPage.xaml.cs">
+      <DependentUpon>EditPasswordPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="AboutPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
