--- a/NotepadOnlineMobile/NotepadOnlineMobile.Android/Properties/AndroidManifest.xml
+++ b/NotepadOnlineMobile/NotepadOnlineMobile.Android/Properties/AndroidManifest.xml
@@ -4,13 +4,9 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.CAMERA" />
-	<application android:label="Notepad.Online Mobile" android:icon="@drawable/icon">
-    <provider android:name="android.support.v4.content.FileProvider"
-				android:authorities="${applicationId}.fileprovider"
-				android:exported="false"
-				android:grantUriPermissions="true">
-      <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
-				android:resource="@xml/file_paths"></meta-data>
-    </provider>
-  </application>
+	<application android:label="Notepad Online" android:icon="@drawable/icon">
+		<provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true">
+			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
+		</provider>
+	</application>
 </manifest>
