--- a/NotepadOnlineMobile/NotepadOnlineMobile/NotepadOnlineMobile.csproj
+++ b/NotepadOnlineMobile/NotepadOnlineMobile/NotepadOnlineMobile.csproj
@@ -53,10 +53,10 @@
     <EmbeddedResource Update="ExplorerPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="InputView.xaml">
+    <EmbeddedResource Update="Views\InputView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="LoadingView.xaml">
+    <EmbeddedResource Update="Views\LoadingView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="LoginPage.xaml">
